# mcp-nfe-br

./: .env.example  .gitignore  LICENSE  README.md  README.pt-BR.md  RELEASE.md  pyproject.toml  server.json
.github/workflows/: publish.yml
audit/: audit_vs_core.py  report.json
specs/nfe/: MANIFEST.md
specs/nfse/: MANIFEST.md
src/mcp_nfe_br/: __init__.py  server.py
src/mcp_nfe_br/models/: __init__.py  invoice.py  nfse.py
src/mcp_nfe_br/schemas/nfe/: leiauteNFe_v4.00_unsigned.xsd  nfe_v4.00_unsigned.xsd
src/mcp_nfe_br/standards/: adn_client.py  govbr_auth.py  nfe_generator.py  nfe_signer.py  nfse_generator.py  nfse_signer.py  sefaz_client.py
src/mcp_nfe_br/tools/: __init__.py  generation.py  nfse.py  sefaz.py  validation.py
src/mcp_nfe_br/utils/: __init__.py  access_key.py  document_ids.py
src/mcp_nfe_br/validators/: nfe_xsd.py  nfse_xsd.py
tests/: conftest.py  test_metadata.py
tests/test_models/: test_invoice.py
tests/test_standards/: test_adn_client.py  test_adn_e2e.py  test_govbr_auth.py  test_nfe_generator.py  test_nfe_generator_escape.py  test_nfe_generator_ibs_cbs.py  test_nfe_generator_icms.py  test_nfe_signer.py  test_rounding.py  test_sefaz_client.py
tests/test_tools/: test_generation.py  test_nfse.py  test_sefaz.py  test_validation.py
tests/test_utils/: test_access_key.py  test_document_ids.py
tests/test_validators/: test_nfe_xsd.py
